Introduced StringReplacer to properly encode symbols like '+' in URI; changed parameter 'url' in 'redirect_uri' in get secret key procedure; improved logoff mechanism

--- a/as/src/main/resources/META-INF/microprofile-config.properties
+++ b/as/src/main/resources/META-INF/microprofile-config.properties
@@ -5,4 +5,4 @@ mail.path = v3/mail/send
 #mail.token = 
 #mail.from = 
 mail.subject = ABE4JWT - Confirm your email
-mail.message = ABE4JWT is a demo software to show ABE capability when applied to microservices. Someone is trying to login using your email. If it is you, please login using the following link:
+mail.message = ABE4JWT is a demo software to showcase ABE capability when applied to JSON Web Tokens and microservices. Someone is trying to login using your email. If it is you, please login using the following link:<br/>
